--- a/src/App.css
+++ b/src/App.css
@@ -1,143 +1,189 @@
 :root {
-	--navy: #0d3b66;
-	--light: #faf0ca;
-	--yellow: #f4d35e;
-	--orange: #ee964b;
-	--red: #f95738;
+  --navy: #0d3b66;
+  --light: #faf0ca;
+  --yellow: #f4d35e;
+  --orange: #ee964b;
+  --red: #f95738;
 }
 
 @font-face {
-	font-family: 'SleepyCat';
-	src: local('SleepyCat'), url(./fonts/SleepyCat.ttf) format('woff');
+  font-family: "SleepyCat";
+  src: local("SleepyCat"), url(./fonts/SleepyCat.ttf) format("woff");
 }
 
 @font-face {
-	font-family: 'Cattino';
-	src: local('Cattino'), url(./fonts/Cattino.otf) format('woff');
+  font-family: "Cattino";
+  src: local("Cattino"), url(./fonts/Cattino.otf) format("woff");
 }
 
 body {
-	background-color: var(--light);
-	display: flex;
-	justify-content: center;
-	margin: 0;
+  background-color: var(--light);
+  display: flex;
+  justify-content: center;
+  margin: 0;
 }
 
 .header__container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .header__title {
-	color: var(--navy);
-	font-family: 'Cattino';
+  color: var(--navy);
+  font-family: "Cattino";
 }
 
 .header__welcome {
-	font-size: 3rem;
-	margin-bottom: 0;
-	margin-top: 0.25em;
+  font-size: 3rem;
+  margin-bottom: 0;
+  margin-top: 0.25em;
 }
 
 .cards__wrapper {
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-	max-width: 62.5em;
-	min-width: 70vw;
-	min-height: 45vh;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 62.5em;
+  min-width: 70vw;
+  min-height: 45vh;
 }
 
 .card {
-	padding: 1.5em;
-	border: 6px solid var(--red);
-	max-width: 15.625em;
-	min-width: 11.25em;
-	border-radius: 7px;
-	background: var(--yellow);
-	margin-bottom: 1em;
-	box-shadow: 0 4px 8px 0 rgb(13, 59, 102, 0.4);
-	transition: 0.3s;
-	margin: 0.5em;
+  padding: 1.5em;
+  border: 6px solid var(--red);
+  max-width: 15.625em;
+  min-width: 11.25em;
+  border-radius: 7px;
+  background: var(--yellow);
+  margin-bottom: 1em;
+  box-shadow: 0 4px 8px 0 rgb(13, 59, 102, 0.4);
+  transition: 0.3s;
+  margin: 0.5em;
 }
 
 .card:hover {
-	box-shadow: 0 4px 8px 0 rgb(13, 59, 102, 0.9);
+  box-shadow: 0 4px 8px 0 rgb(13, 59, 102, 0.9);
 }
 
 .card__text {
-	color: var(--navy);
-	font-family: 'SleepyCat';
-	font-size: 1.7rem;
-	margin: 0.2em;
+  color: var(--navy);
+  font-family: "SleepyCat";
+  font-size: 1.7rem;
+  margin: 0.2em;
 }
 
 .card__text__small {
-	color: var(--navy);
-	font-family: 'SleepyCat';
-	font-size: 1rem;
-	margin: 0.2em;
+  color: var(--navy);
+  font-family: "SleepyCat";
+  font-size: 1rem;
+  margin: 0.2em;
 }
 
 .card__header {
-	font-size: 2rem;
-	margin: 0.2em;
+  font-size: 2rem;
+  margin: 0.2em;
 }
 
 .card__image {
-	width: 100%;
-	border-radius: 5px;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+  width: 100%;
+  border-radius: 5px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.pet-form {
+  max-width: 62.5em;
+  margin: 0.5em;
+  padding: 1.5em;
+  border: 6px solid var(--red);
+  border-radius: 7px;
+  background-color: var(--yellow);
+
+  display: flex;
+  flex-direction: column;
+}
+
+.pet-form__header {
+  font-family: "SleepyCat";
+  font-size: 2rem;
+}
+
+.pet-form__container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.pet-form__entry {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.pet-form__text {
+  font-family: "SleepyCat";
+}
+
+.pet-form__label {
+  font-family: "SleepyCat";
+}
+
+.pet-form__button {
+  margin-top: 10px;
+  padding: 10px 20px;
+
+  font-family: "SleepyCat";
+  font-size: 1.5rem;
+  border-radius: 7px;
 }
 
 .links {
-	color: var(--yellow);
-	font-family: 'Cattino';
-	font-size: 1.5em;
-	text-decoration: none;
+  color: var(--yellow);
+  font-family: "Cattino";
+  font-size: 1.5em;
+  text-decoration: none;
 }
 
 .links:hover {
-	color: var(--red);
+  color: var(--red);
 }
 
 .nav__container {
-	background: var(--navy);
-	display: flex;
-	justify-content: space-around;
-	flex-wrap: wrap;
-	border-radius: 5px;
-	box-shadow: 0 3px 7px 0 rgb(13, 59, 102, 0.2);
+  background: var(--navy);
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  border-radius: 5px;
+  box-shadow: 0 3px 7px 0 rgb(13, 59, 102, 0.2);
 }
 
 .ul {
-	padding: 0;
-	list-style-type: none;
+  padding: 0;
+  list-style-type: none;
 }
 
 .ul__navbar {
-	width: 100%;
+  width: 100%;
 }
 
 .footer {
-	line-height: 2em;
-	margin-top: 0.5em;
-	padding: 1em 3em;
+  line-height: 2em;
+  margin-top: 0.5em;
+  padding: 1em 3em;
 }
 
 .footer__section {
-	min-width: 9.375em;
+  min-width: 9.375em;
 }
 
 .icon {
-	max-width: 1.875em;
+  max-width: 1.875em;
 }
 
 @media only screen and (max-width: 405px) {
-	.header__title {
-		padding-left: 1.5rem;
-	}
+  .header__title {
+    padding-left: 1.5rem;
+  }
 }
